fixes minor layout issue

--- a/src/components/Page/components/Header/Header.scss
+++ b/src/components/Page/components/Header/Header.scss
@@ -98,6 +98,8 @@ $action-horizontal-padding: (1.5 * spacing(tight));
   align-items: center;
 
   > .IndividualAction {
+    display: inline-flex;
+
     &:first-child {
       // Compensates for the fact that we push the icon slightly to the left
       margin-left: -1 * $action-horizontal-padding;
